[package]
name = "nine-hundred-invoice"
version = "1.0.0"
description = "Enterprise-grade invoicing for developing economies"
authors = ["900 Labs"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "nine_hundred_invoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
